# OpenZues

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
docs/: ecc-integration-checkpoint-2026-04-11.md  hermes-integration-checkpoint-2026-04-11.md  mempalace-integration-checkpoint-2026-04-11.md  openclaw-parity-checkpoint-2026-04-10.md  openclaw-parity-progress.md  openclaw-parity-relay-2026-04-14-recovery-thread-019d8c49.md  openclaw-parity-relay-2026-04-14-recovery-thread-019d8dfa.md  openclaw-parity-relay-2026-04-14-recovery-thread-019d8e14.md  openclaw-parity-relay-2026-04-14-recovery-thread-019d8e2d.md  openclaw-parity-relay-2026-04-14-recovery-thread-019d8e42.md  openclaw-parity-relay-2026-04-14-recovery-thread-019d8e51.md  openclaw-parity-relay-2026-04-14-recovery-thread-019d8e5a.md  openclaw-parity-unresolved-seams.md  ops-mesh-sidecar.md  swarm-constitution-checkpoint-2026-04-12.md
scripts/: bootstrap.ps1  openzues-operator-monitor.cmd  openzues-operator-monitor.ps1  openzues-watch-browser.cmd  openzues-watch.cmd
tests/: test_acp_agent.py  test_acp_client_runtime.py  test_acp_commands.py  test_acp_event_mapper.py  test_acp_persistent_bindings.py  test_acp_session_mapper.py  test_acp_session_store.py  test_acp_translator.py  test_app.py  test_browser_posture.py  test_channel_account_routing.py  test_cli.py  test_codex_desktop.py  test_codex_rpc.py  test_database.py  test_device_bootstrap_profile.py  test_environment.py  test_forumforge.py  test_gateway_acp_spawn.py  test_gateway_bootstrap.py  test_gateway_canvas_documents.py  test_gateway_canvas_render.py  test_gateway_capability.py  test_gateway_last_heartbeat.py  test_gateway_logs.py  test_gateway_method_policy.py  test_gateway_model_scan.py  test_gateway_models.py  test_gateway_node_command_policy.py  test_gateway_sessions.py  (+31 more)
(+136 files in other folders)
